--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -1,6 +1,14 @@
 [ {
+  "name" : "CXAdmin",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "Common",
   "type" : "PARTIAL",
+  "params" : [ ]
+}, {
+  "name" : "DataEntry",
+  "type" : "PAGE",
   "params" : [ ]
 }, {
   "name" : "Login",
@@ -8,6 +16,30 @@
   "params" : [ ]
 }, {
   "name" : "Main",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "MunicipalityAdministration",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "MyCart",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "MyMunicipality",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "MyProfile",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "NewFrom",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "Support",
   "type" : "PAGE",
   "params" : [ ]
 }, {
