--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,13 @@
                     <exclude>**/*.java</exclude>
                 </excludes>
             </resource>
+            <resource>
+                <filtering>true</filtering>
+                <directory>services/securityService/src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
         </resources>
         <finalName>CivicXpress</finalName>
         <filters>
@@ -87,6 +94,7 @@
                         <configuration>
                             <sources>
                                 <source>services/cx2/src</source>
+                                <source>services/securityService/src</source>
                             </sources>
                         </configuration>
                     </execution>
