New files added - [ManageUsers.js,ManageUsers.html,ManageMunicipalities.css,ManageMunicipalities.html,ManageMunicipalities.variables.json,ManageMunicipalities.js,ManageUsers.variables.json,ManageUsers.css,ManageUsers,ManageMunicipalities] Files modified - [pages-config.json,Cx2QueryExecutorServiceImpl.java,CXAdmin.html,cx2-queries.hbm.xml,QueryExecutionController.java,servicedef.xml,cx2_query.json,CXAdmin.variables.json,Cx2QueryExecutorService.java,app.variables.json] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -72,6 +72,28 @@
     "operation" : "gotoPage",
     "pageName" : "Main"
   },
+  "goToPage_ManageMunicipalities" : {
+    "_id" : "wm-goToPage_ManageMunicipalities-wm.NavigationVariable-1478585524041",
+    "name" : "goToPage_ManageMunicipalities",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "ManageMunicipalities",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
+  "goToPage_ManageUsers" : {
+    "_id" : "wm-goToPage_ManageUsers-wm.NavigationVariable-1478585569002",
+    "name" : "goToPage_ManageUsers",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "ManageUsers",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_MunicipalityAdministration" : {
     "_id" : "wm-goToPage_MunicipalityAdministration-wm.NavigationVariable-1478577191075",
     "name" : "goToPage_MunicipalityAdministration",
