--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -19,6 +19,14 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "ManageMunicipalities",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "ManageUsers",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "MunicipalityAdministration",
   "type" : "PAGE",
   "params" : [ ]
