New files added - [UserCreation.js,UserCreation.html,UserCreation.variables.json,UserCreation.css,UserCreation] Files modified - [ManageUsers.js,pages-config.json,ManageUsers.html,QueryExecutionController.java,cx2-queries.hbm.xml,project-security-provider.xml,DataEntry.html,app.variables.json,Cx2QueryExecutorServiceImpl.java,Login.html,servicedef.xml,intercept-urls.json,ManageUsers.variables.json,cx2_query.json,Cx2QueryExecutorService.java,DataEntry.variables.json,DataEntry.js] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -160,6 +160,17 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_UserCreation" : {
+    "_id" : "wm-goToPage_UserCreation-wm.NavigationVariable-1478587383573",
+    "name" : "goToPage_UserCreation",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "UserCreation",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "loggedInUser" : {
     "_id" : "wm-loggedInUser-wm.Variable-1478578831248",
     "name" : "loggedInUser",
