--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -51,6 +51,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "UserCreation",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "footer",
   "type" : "FOOTER",
   "params" : [ ]
