New files added - [ManageSubscriptions.css,ManageSubscriptions.js,ManageSubscriptions.variables.json,ManageSubscriptions.html,ManageSubscriptions] Files modified - [pages-config.json,MyProfile.html,QueryExecutionController.java,cx2-queries.hbm.xml,CXAdmin.variables.json,app.variables.json,Cx2QueryExecutorServiceImpl.java,CXAdmin.html,UserCreation.html,servicedef.xml,UserCreation.variables.json,cx2_query.json,Cx2QueryExecutorService.java] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -83,6 +83,17 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_ManageSubscriptions" : {
+    "_id" : "wm-goToPage_ManageSubscriptions-wm.NavigationVariable-1478603979180",
+    "name" : "goToPage_ManageSubscriptions",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "ManageSubscriptions",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_ManageUsers" : {
     "_id" : "wm-goToPage_ManageUsers-wm.NavigationVariable-1478585569002",
     "name" : "goToPage_ManageUsers",
