--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -23,6 +23,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "ManageSubscriptions",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "ManageUsers",
   "type" : "PAGE",
   "params" : [ ]
