New files added - [] Files modified - [UserCreation.js,UserCreation.html,UserCreation.variables.json,ManageSubscriptions.html,app.variables.json] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -244,6 +244,20 @@
     "redirectTo" : "Login",
     "useDefaultSuccessHandler" : true
   },
+  "NewUserToLogin" : {
+    "_id" : "wm-NewUserToLogin-wm.NavigationVariable-1478606207596",
+    "name" : "NewUserToLogin",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ {
+      "target" : "pageName",
+      "value" : "Login",
+      "type" : "list"
+    } ],
+    "operation" : "gotoPage",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "supportedLocale" : {
     "_id" : "wm-wm.Variable1402640443182",
     "name" : "supportedLocale",
