New files added - [ManageGISData.variables.json,ManageGISData.js,ManageGISData.html,ManageGISData.css,ManageGISData] Files modified - [cx2_published_dataModel.json,RolesServiceImpl.java,RolesService.java,QueryExecutionController.java,MunicipalityAdministration.variables.json,RolesController.java,project-security-provider.xml,app.variables.json,Cx2QueryExecutorServiceImpl.java,UsersController.java,Roles.java,servicedef.xml,cx2_query.json,DataEntry.variables.json,MunicipalitiesServiceImpl.java,pages-config.json,cx2-queries.hbm.xml,database-options.json,DataEntry.html,Users.java,UsersService.java,MunicipalityAdministration.html,Cx2QueryExecutorService.java,UsersServiceImpl.java,DataEntry.js] Refactored files - [] Fixed bugs - [] Removed files - [UserRolesService.java,UserRolesDao.java,UserRolesController.java,UserRoles.java,UserRolesServiceImpl.java]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -72,6 +72,17 @@
     "operation" : "gotoPage",
     "pageName" : "Main"
   },
+  "goToPage_ManageGISData" : {
+    "_id" : "wm-goToPage_ManageGISData-wm.NavigationVariable-1478683823337",
+    "name" : "goToPage_ManageGISData",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "ManageGISData",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_ManageMunicipalities" : {
     "_id" : "wm-goToPage_ManageMunicipalities-wm.NavigationVariable-1478585524041",
     "name" : "goToPage_ManageMunicipalities",
