New files added - [MunicipalityUsers.variables.json,MunicipalityUsers.html,MunicipalityUsers.js,MunicipalityUsers.css,MunicipalityUsers] Files modified - [leftnav.html,pages-config.json,UserCreation.js,Main.html,QueryExecutionController.java,cx2-queries.hbm.xml,Login.css,MunicipalityAdministration.variables.json,app.variables.json,Main.variables.json,Cx2QueryExecutorServiceImpl.java,UserCreation.html,servicedef.xml,Login.html,ManageGISData.html,UserCreation.variables.json,MunicipalityAdministration.html,cx2_query.json,Cx2QueryExecutorService.java] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -127,6 +127,17 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_MunicipalityUsers" : {
+    "_id" : "wm-goToPage_MunicipalityUsers-wm.NavigationVariable-1478761593507",
+    "name" : "goToPage_MunicipalityUsers",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "MunicipalityUsers",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_MyCart" : {
     "_id" : "wm-goToPage_MyCart-wm.NavigationVariable-1478577283252",
     "name" : "goToPage_MyCart",
