--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -39,6 +39,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "MunicipalityUsers",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "MyCart",
   "type" : "PAGE",
   "params" : [ ]
