New files added - [] Files modified - [leftnav.html,Main.variables.json,Main.js,app.variables.json] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -280,6 +280,19 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "NoOfMunicipalitiesForUser" : {
+    "_id" : "wm-NoOfMunicipalitiesForUser-wm.Variable-1478779818280",
+    "name" : "NoOfMunicipalitiesForUser",
+    "owner" : "App",
+    "category" : "wm.Variable",
+    "dataBinding" : [ ],
+    "dataSet" : {
+      "dataValue" : 0
+    },
+    "type" : "number",
+    "isList" : false,
+    "saveInPhonegap" : false
+  },
   "supportedLocale" : {
     "_id" : "wm-wm.Variable1402640443182",
     "name" : "supportedLocale",
