New files added - [ContractorApprovalsServiceImpl.java,ContractorApprovals.java,ContractorsServiceImpl.java,ContractorApprovalsService.java,ContractorApprovalsController.java,Contractors.java,ContractorsDao.java,ContractorsService.java,ContractorApprovalsDao.java,ContractorsController.java] Files modified - [Subdivisions.java,cx2_published_dataModel.json,Main.html,ManageGISData.variables.json,ManageMunicipalities.js,ManageSubscriptions.html,MunicipalitiesController.java,MunicipalityUsers.variables.json,FormTypesService.java,UsersController.java,UserCreation.html,servicedef.xml,ManageGISData.html,ManageSubscriptions.variables.json,Municipalities.java,MunicipalitiesServiceImpl.java,ManageUsers.html,ManageSubscriptions.js,FormTypesServiceImpl.java,ManageMunicipalities.variables.json,States.java,FormTypesController.java,Main.variables.json,FormTypes.java,MunicipalityUsers.html,StatesServiceImpl.java,ManageMunicipalities.html,StatesController.java,topnav.html,ManageUsers.variables.json,StatesService.java,MunicipalitiesService.java,UsersServiceImpl.java,db-connection-settings.json] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -11,7 +11,7 @@
   "dbName" : "cx2",
   "port" : "1433",
   "schemaName" : "cx2",
-  "tableFilter" : [ "WmTest", "Email", "Municipalities", "States", "ManualFeeTypes", "Subdivisions", "GISRecords", "FormTypes", "FormCategories", "FormStatuses", "Roles", "Users", "UserRoles", "UserSubscriptions" ],
+  "tableFilter" : [ "WmTest", "Email", "Municipalities", "States", "ManualFeeTypes", "Subdivisions", "GISRecords", "FormTypes", "FormCategories", "FormStatuses", "Roles", "Users", "UserRoles", "UserSubscriptions", "Contractors", "ContractorApprovals" ],
   "schemaFilter" : [ ],
   "impersonateUser" : false,
   "activeDirectoryDomain" : null,
