New files added - [SFNewResidentialStructure.html,SfnewResidentialStructureServiceImpl.java,SFNewResidentialStructure.css,SfnewResidentialStructureController.java,SfnewResidentialStructure.java,SfnewResidentialStructureService.java,SFNewResidentialStructure.js,SFNewResidentialStructure.variables.json,SfnewResidentialStructureDao.java] Files modified - [cx2_published_dataModel.json,Main.html,UserPasswordResetTokensController.java,FormStatuses.java,app.variables.json,FormTypesService.java,UsersController.java,Main.js,servicedef.xml,FormCategories.java,DataEntry.variables.json,MunicipalitiesServiceImpl.java,leftnav.html,pages-config.json,FormTypesServiceImpl.java,DataEntry.html,FormTypesController.java,Main.variables.json,FormTypes.java,FormCategoriesController.java,Users.java,UsersService.java,FormCategoriesServiceImpl.java,FormCategoriesService.java,UsersServiceImpl.java,db-connection-settings.json,DataEntry.js] Refactored files - [] Fixed bugs - [] Removed files - [cx2_draft_dataModel.json]

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -11,10 +11,6 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
-  "name" : "ForgotPassword",
-  "type" : "PAGE",
-  "params" : [ ]
-}, {
   "name" : "Login",
   "type" : "PAGE",
   "params" : [ ]
@@ -62,6 +58,13 @@
   "name" : "NewFrom",
   "type" : "PAGE",
   "params" : [ ]
+}, {
+  "name" : "SFNewResidentialStructure",
+  "type" : "PAGE",
+  "params" : [ {
+    "name" : "FormId",
+    "type" : "integer"
+  } ]
 }, {
   "name" : "Support",
   "type" : "PAGE",
