--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -182,6 +182,25 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_SFNewResidentialStructure" : {
+    "_id" : "wm-goToPage_SFNewResidentialStructure-wm.NavigationVariable-1479115891779",
+    "name" : "goToPage_SFNewResidentialStructure",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ {
+      "target" : "pageName",
+      "value" : "SFNewResidentialStructure",
+      "type" : "list"
+    } ],
+    "operation" : "gotoPage",
+    "pageName" : "SFNewResidentialStructure",
+    "dataSet" : [ {
+      "type" : "integer",
+      "target" : "FormId",
+      "value" : "bind:Widgets.selectForm.datavalue.id"
+    } ],
+    "pageTransitions" : "none"
+  },
   "goToPage_Support" : {
     "_id" : "wm-goToPage_Support-wm.NavigationVariable-1478577248530",
     "name" : "goToPage_Support",
