--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -11,7 +11,7 @@
   "dbName" : "cx2",
   "port" : "1433",
   "schemaName" : "cx2",
-  "tableFilter" : [ "WmTest", "Email", "Municipalities", "States", "ManualFeeTypes", "Subdivisions", "GISRecords", "FormTypes", "FormCategories", "FormStatuses", "Roles", "Users", "UserRoles", "UserSubscriptions", "Contractors", "ContractorApprovals", "UserPasswordResetTokens", "SFNewResidentialStructure" ],
+  "tableFilter" : [ "ContractorApprovals", "Contractors", "FormCategories", "FormStatuses", "FormTypes", "GISRecords", "ManualFeeTypes", "Municipalities", "Roles", "SFNewResidentialStructure", "States", "Subdivisions", "UserPasswordResetTokens", "Users", "UserSubscriptions" ],
   "schemaFilter" : [ ],
   "impersonateUser" : false,
   "activeDirectoryDomain" : null,
