New files added - [WorkSchedule.js,MunicipalitySettings.html,WorkSchedule.css,MunicipalitySettings.variables.json,MunicipalitySettings.css,WorkSchedule.variables.json,MunicipalitySettings.js,WorkSchedule.html,WorkSchedule,MunicipalitySettings] Files modified - [SFNewResidentialStructure.html,cx2_published_dataModel.json,QueryExecutionController.java,SfnewResidentialStructureService.java,FormStatuses.java,app.variables.json,MunicipalityUsers.variables.json,Cx2QueryExecutorServiceImpl.java,SfnewResidentialStructureController.java,servicedef.xml,ManageSubscriptions.variables.json,SFNewResidentialStructure.variables.json,cx2_query.json,Municipalities.java,DataEntry.variables.json,MunicipalitiesServiceImpl.java,SfnewResidentialStructureServiceImpl.java,pages-config.json,FormTypesServiceImpl.java,cx2-queries.hbm.xml,SfnewResidentialStructure.java,ManageMunicipalities.variables.json,DataEntry.html,Main.variables.json,MunicipalityUsers.html,StatesServiceImpl.java,ManageMunicipalities.html,MunicipalityAdministration.html,Cx2QueryExecutorService.java,UsersServiceImpl.java,DataEntry.js] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -150,6 +150,17 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_MunicipalitySettings" : {
+    "_id" : "wm-goToPage_MunicipalitySettings-wm.NavigationVariable-1479365831697",
+    "name" : "goToPage_MunicipalitySettings",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "MunicipalitySettings",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_MunicipalityUsers" : {
     "_id" : "wm-goToPage_MunicipalityUsers-wm.NavigationVariable-1478761593507",
     "name" : "goToPage_MunicipalityUsers",
@@ -224,6 +235,17 @@
     "dataBinding" : [ ],
     "operation" : "gotoPage",
     "pageName" : "UserCreation",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
+  "goToPage_WorkSchedule" : {
+    "_id" : "wm-goToPage_WorkSchedule-wm.NavigationVariable-1479370656242",
+    "name" : "goToPage_WorkSchedule",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "WorkSchedule",
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
