--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -39,6 +39,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "MunicipalitySettings",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "MunicipalityUsers",
   "type" : "PAGE",
   "params" : [ ]
@@ -84,6 +88,10 @@
   "params" : [ ]
 }, {
   "name" : "UserCreation",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "WorkSchedule",
   "type" : "PAGE",
   "params" : [ ]
 }, {
