New files added - [ManualFeeTypes.css,ManualFeeTypes.html,ManualFeeTypes.variables.json,ManualFeeTypes.js,ManualFeeTypes] Files modified - [MunicipalityUsers.variables.json,pages-config.json,UserCreation.js,MunicipalityUsers.html,UserCreation.html,UserCreation.variables.json,MunicipalityAdministration.html,app.variables.json] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -116,6 +116,17 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_ManualFeeTypes" : {
+    "_id" : "wm-goToPage_ManualFeeTypes-wm.NavigationVariable-1479722237149",
+    "name" : "goToPage_ManualFeeTypes",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "ManualFeeTypes",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_MunicipalityAdministration" : {
     "_id" : "wm-goToPage_MunicipalityAdministration-wm.NavigationVariable-1478577191075",
     "name" : "goToPage_MunicipalityAdministration",
