--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -35,6 +35,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "ManualFeeTypes",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "MunicipalityAdministration",
   "type" : "PAGE",
   "params" : [ ]
