New files added - [ForgotPassword.js,servicedef.xml,ResetPasswordMailService.spring.xml,mail.jar,ForgotPassword.variables.json,ResetPasswordMailService.java,ForgotPassword.html,README.md,ResetPasswordMailController.java,ForgotPassword.css,ForgotPassword] Files modified - [pages-config.json,CXPasswordResetService.java,QueryExecutionController.java,cx2-queries.hbm.xml,project-services.xml,project-security-provider.xml,app.variables.json,CXPasswordResetController.java,Cx2QueryExecutorServiceImpl.java,Login.html,servicedef.xml,intercept-urls.json,pom.xml,cx2_query.json,Cx2QueryExecutorService.java] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -64,6 +64,17 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_ForgotPassword" : {
+    "_id" : "wm-goToPage_ForgotPassword-wm.NavigationVariable-1479880545540",
+    "name" : "goToPage_ForgotPassword",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "ForgotPassword",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_Main" : {
     "_id" : "wm-wm.NavigationVariable1389180517517",
     "name" : "goToPage_Main",
